fix scroll on firefox

--- a/src/sass/components/_app.scss
+++ b/src/sass/components/_app.scss
@@ -94,7 +94,3 @@ a[href^=tel]{
       right: 12%;
     }
 }
-
-.iScrollLoneScrollbar{
-  display: none;
-}
